tests/snapshots/dependencies__package__pass__virtual_workspace_single_package_lib_target.snap
---
source: tests/dependencies.rs
expression: output
snapshot_kind: text
---
COMMAND:
dependencies
--package
package_lib_target

STDERR:

STDOUT:
digraph {

    graph [
        label="package_lib_target",
        labelloc=t,

        pad=0.4,

        // Consider rendering the graph using a different layout algorithm, such as:
        // [dot, neato, twopi, circo, fdp, sfdp]
        layout=neato,
        overlap=false,
        splines="line",
        rankdir=LR,

        fontname="Helvetica", 
        fontsize="36",
    ];

    node [
        fontname="monospace",
        fontsize="10",
        shape="record",
        style="filled",
    ];

    edge [
        fontname="monospace",
        fontsize="10",
    ];

    "package_lib_target" [label="crate|package_lib_target", fillcolor="#5397c8"]; // "crate" node


}
